@@ -2,7 +2,9 @@ Revision history for DBIx::Class
 
     * Fixes
         - Revert default selection to being lazy again (eagerness introduced
-          in 0.08126) - fixes DBIx::Class::Helper::ResultSet::RemoveColumns
+          in 0.08125) - fixes DBIx::Class::Helper::ResultSet::RemoveColumns
+        - Fix losing order of columns provided in select/as (regression from
+          0.08125)
         - Unaliased "dark" selectors no longer throw off prefetch
         - Fix proper composition of bind values across all possible
           SQL areas ( group_by => \[ ... ] now works properly )
